added boycott series

--- a/ai-kit-butler-parody.html
+++ b/ai-kit-butler-parody.html
@@ -23,7 +23,7 @@
     <section>
       <h2>Parody and the Imitation Without an Origin</h2>
       <p>Butler uses the example of drag to make a profound point about identity. Drag is not a simple imitation of a "real" gender. Instead, it reveals the imitative structure of all gender. The "original" gender that we think of as natural is itself a performance, a set of repeated acts that conform to a social norm.</p>
-      <p>Therefore, Butler argues, "gender parody reveals that the original identity after which gender fashions itself is an imitation without an origin." The parody doesn't copy the original; it reveals the original to have been a copy all along.</p>
+      <p>So Butler argues, "gender parody reveals that the original identity after which gender fashions itself is an imitation without an origin." The parody doesn't copy the original; it reveals the original to have been a copy all along.</p>
     </section>
     
     <section>
@@ -33,7 +33,7 @@
         <li><strong>The Romantic Critique:</strong> AI is not original. It is a derivative collage of human-made content.</li>
         <li><strong>The Butlerian Re-reading:</strong> AI's derivativeness is not its weakness but its most revealing feature. By being a "blurry jpeg of the web," it exposes the fact that human culture is also a vast, intertextual web of imitation and repetition. The "original" human author we venerate is also weaving together a "tissue of quotations" (to borrow from Barthes).</li>
       </ul>
-      <p>The AI, in its very structure, performs a parody of originality. It demonstrates that creativity is not about conjuring something from nothing, but about the skillful re-combination and re-contextualization of existing forms. The machine doesn't fail to be an original author. It reveals originality itself to be a regulatory fiction, a myth we tell ourselves to conceal the imitative and collective nature of all creation.</p>
+      <p>The AI, in its structure, performs a parody of originality. It demonstrates that creativity is not about conjuring something from nothing, but about the skillful re-combination and re-contextualization of existing forms. The machine doesn't fail to be an original author. It reveals originality itself to be a regulatory fiction, a myth we tell ourselves to conceal the imitative and collective nature of all creation.</p>
     </section>
 
     <div class="bottom-links">
