--- a/ai-kit-butler-performativity.html
+++ b/ai-kit-butler-performativity.html
@@ -22,7 +22,7 @@
 
     <section>
       <h2>There Is No "Doer Behind the Deed"</h2>
-      <p>Drawing on Nietzsche, Butler argues that we mistakenly invent a stable "subject" as the cause of various actions. We see a series of gendered acts and invent a "gender identity" as their origin. But this is a grammatical illusion. As she famously puts it, "There is no gender identity behind the expressions of gender; that identity is performatively constituted by the very 'expressions' that are said to be its results."</p>
+      <p>Drawing on Nietzsche, Butler argues that we mistakenly invent a stable "subject" as the cause of various actions. We see a series of gendered acts and invent a "gender identity" as their origin. But this is a grammatical illusion. As she famously puts it, "There is no gender identity behind the expressions of gender; that identity is performatively constituted by the 'expressions' that are said to be its results."</p>
       <p>The "doer" is a fiction produced by the "deed." The subject does not precede the performance; the subject is an effect of the performance.</p>
     </section>
 
