--- a/ai-kit-dangerous-book.html
+++ b/ai-kit-dangerous-book.html
@@ -16,7 +16,7 @@
       <a href="ai-hermeneutics-kit.html" class="quickkit-pill">← Back to AI Hermeneutics Kit</a>
     </div>
     <h1>The Dangerous Book: On Texts That Transform and Transgress</h1>
-    <p>The suggestion that AI-generated texts might be "dangerous" often sounds like a uniquely 21st-century alarm. Yet, the belief that texts can be transformative, and therefore dangerous, is one of the oldest ideas in intellectual history. Societies have long recognized that certain forms of discourse can challenge established truths and reshape human consciousness, for better or for worse. To think clearly about the potential risks of AI, we must first place them in this long tradition.</p>
+    <p>The suggestion that AI-generated texts might be "dangerous" often sounds like a uniquely 21st-century alarm. But the belief that texts can be transformative (and dangerous) is one of the oldest ideas in intellectual history. Societies have long recognized that certain forms of discourse can challenge established truths and reshape human consciousness, for better or for worse. To think clearly about the potential risks of AI, we must first place them in this long tradition.</p>
 
     <hr>
 
@@ -39,7 +39,7 @@
           <li>A profound philosophical work projects a world where our common-sense assumptions are revealed as illusions.</li>
           <li>A great novel projects a world that can permanently reconfigure our capacity for empathy.</li>
       </ul>
-      <p>The "danger" of a text is directly proportional to its power to perform what Hans-Georg Gadamer called a "fusion of horizons"—the ability to fundamentally change the reader's perspective. A book that cannot change you, and is therefore not "dangerous" in this sense, is arguably not worth reading. The perceived risk of AI-generated text is therefore not a new problem, but a new instance of an ancient one: how do we engage with media that has the capacity to remake us?</p>
+      <p>The "danger" of a text is directly proportional to its power to perform what Hans-Georg Gadamer called a "fusion of horizons"—the ability to fundamentally change the reader's perspective. A book that cannot change you (and is not "dangerous" in this sense) is maybe just not worth reading. The perceived risk of AI-generated text is not a new problem, but a new instance of an ancient one: how do we engage with media that has the capacity to remake us?</p>
     </section>
 
     <div class="bottom-links">
