--- a/ai-kit-deleuze-forces.html
+++ b/ai-kit-deleuze-forces.html
@@ -27,12 +27,12 @@
 
     <section>
       <h2>AI Prompting as Desiring-Production</h2>
-      <p>Most engagement with LLMs is fundamentally reactive. As noted in <a href="post37.html">Post 37</a>, a vague prompt produces a "blurry jpeg of the web," a statistically average, and therefore highly conventional, response. This is a reactive dialogue: a reactive user makes a reactive request and gets a reactive answer. This is a failed act of desiring-production.</p>
+      <p>Most engagement with LLMs is fundamentally reactive. As noted in <a href="post37.html">Post 37</a>, a vague prompt produces a "blurry jpeg of the web," a statistically average and highly conventional response. This is a reactive dialogue: a reactive user makes a reactive request and gets a reactive answer. This is a failed act of desiring-production.</p>
       <p>An active engagement with AI, however, would aim to engineer a failure in the machine's reactive habits. The goal of a good prompt is to force the LLM out of its conventional pathways and into a more novel, less probable region of its latent space. This is a successful act of desiring-production.</p>
       
       <h3>A Deleuzian Diagnostic for Prompts:</h3>
       <ul>
-          <li><strong>Reactive Prompting:</strong> Asks the AI to summarize, explain, or generate something based on established norms ("Write a professional email," "Explain photosynthesis"). It seeks to reproduce existing knowledge. It is an act of <a href="https://en.wikipedia.org/wiki/Ressentiment"><em>ressentiment</em></a> against the blank page, seeking conformity.</li>
+          <li><strong>Reactive Prompting:</strong> Asks the AI to summarize, explain, or generate something based on established norms ("Write a professional email," "Explain photosynthesis"). It tries to reproduce existing knowledge. It is an act of <a href="https://en.wikipedia.org/wiki/Ressentiment"><em>ressentiment</em></a> against the blank page, looking for conformity.</li>
           <li><strong>Active Prompting:</strong> Forces the AI to synthesize disparate concepts, to create connections where none existed ("Write a legal brief in the poetic style of a 17th-century mystic," "Design a marketing plan based on the migratory patterns of birds"). It is an act of affirmation, using the machine to produce a new possibility.</li>
       </ul>
       <p>This shifts the entire ethical and aesthetic burden. The question is not whether the AI has a soul. The question is whether we are using it as an active tool for production or a reactive machine for reproduction.</p>
