--- a/ai-kit-deleuze-goodwill.html
+++ b/ai-kit-deleuze-goodwill.html
@@ -26,7 +26,7 @@
       <p>Deleuze’s refusal of goodwill is a strategic attack on the unified subject. The "author" we think we are communing with is not a real presence, but a system of related meanings we construct based on our own readerly expectations. We assume the writer wants to be understood, so we smooth over contradictions and search for a single, coherent intention.</p>
       <p>Deleuze's "unfriendly" style makes this impossible. By employing deception, ventriloquism, and radical shifts in meaning, he forces us to confront the fact that there is no stable, singular "Deleuze" behind the text. We are forced to abandon the search for a person and instead engage with the text as an impersonal machine that produces concepts.</p>
       <ul>
-          <li><strong>The Romantic Reader</strong> seeks communion with a soul.</li>
+          <li><strong>The Romantic Reader</strong> tries for communion with a soul.</li>
           <li><strong>The Deleuzian Reader</strong> must map the functions of a textual machine.</li>
       </ul>
     </section>
