--- a/ai-kit-genealogy.html
+++ b/ai-kit-genealogy.html
@@ -41,7 +41,7 @@
 
     <h3>Augustine (354–430): The Rule of Charity</h3>
     <ul>
-      <li><strong>Core Method:</strong> Seek intended meaning, yet accept unintended senses if they promote love and truth.</li>
+      <li><strong>Core Method:</strong> Look for intended meaning but accept unintended senses if they promote love and truth.</li>
       <li><strong>AI Response:</strong> Evaluate interpretations by their ethical fruits rather than origin.</li>
       <li><strong>Verdict:</strong> AI texts can be responsibly interpreted under the “rule of charity.”</li>
     </ul>
