--- a/ai-kit-hermeneutics-of-risk.html
+++ b/ai-kit-hermeneutics-of-risk.html
@@ -49,7 +49,7 @@
         <li><strong>Reduction and Categorization:</strong> To process your input, an AI must categorize you and your request. The risk is that this computational model of you is a radical simplification of your personhood. You are reduced to a set of predictable patterns, and your unique identity is flattened into a type.</li>
         <li><strong>Algorithmic Shaping of the Self:</strong> As the AI models you, it tailors its responses to what it predicts you want or need. This creates a feedback loop that can subtly shape your thoughts, desires, and even your sense of self. This aligns with Michel Foucault's concept of "technologies of the self," where modern forms of power operate by shaping individuals from within.</li>
       </ul>
-      <p>A complete hermeneutics for the age of AI must therefore be a dual practice: a critical reading of the machine's words, and a critical awareness of how the machine is, in turn, reading us.</p>
+      <p>A complete hermeneutics for the age of AI needs to be a dual practice: a critical reading of the machine's words, and a critical awareness of how the machine is, in turn, reading us.</p>
     </section>
 
     <div class="bottom-links">
