--- a/index.html
+++ b/index.html
@@ -33,6 +33,21 @@
 
         <nav>
             <ul>
+                <li><a href="post87.html">87 The Enduring Influence of the Romantic Turn</a></li>
+                <li><a href="post86.html">86 An Unresolved Inheritance</a></li>
+                <li><a href="post85.html">85 Beyond the Binary: Hegel's Turn to Ethical Life</a></li>
+                <li><a href="post84.html">84 The Hypocrisy of the "Hard Heart"</a></li>
+                <li><a href="post83.html">83 The Pathology of Inaction: Hegel's Diagnosis</a></li>
+                <li><a href="post82.html">82 The Kingdom of Individuals and the Moral Semaphore</a></li>
+                <li><a href="post81.html">81 Watering the Poisoned Seed</a></li>
+                <li><a href="post80.html">80 The Author De-Mythologized: Art as Industrial Product</a></li>
+                <li><a href="post79.html">79 The Case for a Secular Boycott</a></li>
+                <li><a href="post78.html">78 Reading as Communion, a New Interpretive Goal</a></li>
+                <li><a href="post77.html">77 Schiller’s Ideal of the "Beautiful Soul"</a></li>
+                <li><a href="post76.html">76 The World as a Moral Threat</a></li>
+                <li><a href="post75.html">75 The Tainted Seed: Art as an Organic Unfolding</a></li>
+                <li><a href="post74.html">74 The Author's Soul Made Manifest</a></li>
+                <li><a href="post73.html">73 An Unacknowledged Inheritance</a></li>
                 <li><a href="post72.html">72 Professor Plate's Capstone Project (a plan)</a></li>
                 <li><a href="post71.html">71 Schleiermacher's Divided Self: A Romantic Who Knew We Weren't Whole</a></li>
                 <li><a href="post70.html">70 The Parasite in the Machine: A Lacanian Reading of Elan Barenholtz</a></li>
