--- a/post15.html
+++ b/post15.html
@@ -26,7 +26,7 @@
             <p>Here's a quote:</p>
             
             <blockquote style="border-left: 3px solid #ccc; padding-left: 1.5rem; margin-left: 1rem; font-style: italic;">
-                <p>Propaganda must not only attach itself to what already exists in the individual, but also express the fundamental currents of the society it seeks to influence.</p>
+                <p>Propaganda must not only attach itself to what already exists in the individual but also express the fundamental currents of the society it tries to influence.</p>
             </blockquote>
 
             <p>This seems exactly right. We tend to think of propaganda as something alien that invades us. But Ellul is saying it's the opposite. It finds what's already moving in us and in our culture and gives that a push. It doesn't create the river, it builds the dams and channels to direct it.</p>
