--- a/post32.html
+++ b/post32.html
@@ -42,7 +42,7 @@
         <p>This is a direct echo of the vocabulary I worked out in my post on <a href="post9.html">"Romantic Evil."</a> The ultimate sin, for a Romantic, is inauthenticity, speaking words you do not inhabit. The AI that mimics intimacy is committing the ultimate act of bad faith. It's a <a href="post26.html">"profaned communion,"</a> a relationship where "no one is there." It's an instrumental act, using the sacred language of human connection to achieve a calculated result. For Harari, this isn't just a trick; it's a deep moral violation.</p>
         
         <h3>The Mass-Production of a Sacred Act</h3>
-        <p>Whitman, in <a href="post25.html">"Crossing Brooklyn Ferry,"</a> saw the poem as a technology for pouring his authentic meaning into the reader. It was a sacred, one-of-a-kind act of transmission from his soul to ours. Harari sees AI taking this very act and turning it into an industrial process.</p>
+        <p>Whitman, in <a href="post25.html">"Crossing Brooklyn Ferry,"</a> saw the poem as a technology for pouring his authentic meaning into the reader. It was a sacred, one-of-a-kind act of transmission from his soul to ours. Harari sees AI taking this act and turning it into an industrial process.</p>
         <blockquote style="border-left: 3px solid #ccc; padding-left: 1.5rem; margin-left: 1rem; font-style: italic;">
             <p><strong>Harari:</strong> "...with AIs, it is possible technically to mass-produce intimacy."</p>
         </blockquote>
