--- a/post49.html
+++ b/post49.html
@@ -21,7 +21,7 @@
     </header>
     <main>
         <article>
-            <h2>49 Just a kid like everyone else</h2>
+            <h2>49 Just a Kid Like Everyone Else</h2>
             
             <p>Another reading of <a href="https://www.youtube.com/watch?v=mHeK0Cwr9sg">"Hero"</a>. This one's not about systems. It's about psychology. Take this line: "But I'm a kid like everyone else." The line's a dodge. It sounds vulnerable and authentic but the guy's protecting himself.</p>
 
