--- a/post54.html
+++ b/post54.html
@@ -23,7 +23,7 @@
 <main>
 <article>
   <h2>54 The Author-Function as Sacrilege: A Romantic Test</h2>
-  <p>The most common critique of AI writing is that there is "no one there." This assumes the Romantic ideal of an "author" as a soul pouring its meaning into the text. But the rigorous Romantics started from a more skeptical place: Schleiermacher famously argued that <strong>misunderstanding is the norm</strong>, and therefore interpretation must be a disciplined art.<sup><a href="#ref1">1</a></sup> A core part of that art was reconstructing the author's singular practice.</p>
+  <p>The most common critique of AI writing is that there is "no one there." This assumes the Romantic ideal of an "author" as a soul pouring its meaning into the text. But the rigorous Romantics started from a more skeptical place: Schleiermacher argued that <strong>misunderstanding is the norm</strong>. Interpretation must be a disciplined art.<sup><a href="#ref1">1</a></sup> A core part of that art was reconstructing the author's singular practice.</p>
   <p>This wasn't just empathy; it was a formal method. It involved both a <strong>comparative</strong> analysis (tracing patterns against the rules of language) and a <strong>"divinatory"</strong> one, making a disciplined, intuitive leap to hypothesize the creative act that could produce such a text. So, let's run this more complex test. What happens when a Romantic interpreter confronts an AI?</p>
 
   <h3>A Practical Demonstration</h3>
