--- a/post56.html
+++ b/post56.html
@@ -23,7 +23,7 @@
   <main>
     <article>
       <h2>56 The Monstrous Parody of Synthetic Individuality</h2>
-      <p>Critics often attack a strawman of Romantic "individuality," reducing it to a teenager's diary. But the rigorous definition is about <strong>structural integrity</strong> rooted in a unique inner vision. For the Romantics, the individual soul was the locus of the divine. William Blake spoke of the "Human Form Divine," seeing imagination as the very presence of God in humanity.<sup><a href="#ref1">1</a></sup> Individuality was not a mere pattern of style; it was the sensible evidence of an immortal, ineffable soul.</p>
+      <p>Critics often attack a strawman of Romantic "individuality," reducing it to a teenager's diary. But the rigorous definition is about <strong>structural integrity</strong> rooted in a unique inner vision. For the Romantics, the individual soul was the locus of the divine. William Blake spoke of the "Human Form Divine," seeing imagination as the presence of God in humanity.<sup><a href="#ref1">1</a></sup> Individuality was not a mere pattern of style; it was the sensible evidence of an immortal, ineffable soul.</p>
       <p>This fierce commitment to a spiritually grounded self allows us to run a fascinating, and horrifying, experiment. Can we use the <a href="romantic-kit-hermeneutics.html">two-rail method</a> to identify a "synthetic individuality" in an AI's output?</p>
 
       <h3>An Analytical Test Case</h3>
