--- a/post57.html
+++ b/post57.html
@@ -6,7 +6,7 @@
   <title>Post 57 - Professor Plate's Notebook</title>
   <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css2?family=Space+Mono&display=swap" rel="stylesheet">
-  <meta name="description" content="Arguing that the 'psychological rail' of Romantic hermeneutics is not a blind spot but a necessary tool for seeking a spiritual presence, an act that reveals AI's emptiness."/>
+  <meta name="description" content="Arguing that the 'psychological rail' of Romantic hermeneutics is not a blind spot but a necessary tool for finding a spiritual presence, an act that reveals AI's emptiness."/>
 </head>
 <body>
   <header class="site-header">
@@ -29,7 +29,7 @@
       
       <h3>The Necessary Second Rail</h3>
       <p>When we analyze an AI text, the grammatical rail is real. There <em>is</em> a system. But the psychological rail, the search for a singular, visionary "voice," has no corresponding reality. And more importantly, the spiritual quest to find communion with another soul touched by the divine is impossible. There is no soul in the machine.</p>
-      <p>A modern critic might call this a "hermeneutic blind spot." But for a Romantic, it is the entire point. Their method is not a neutral analytical tool; it is a spiritual discipline. It is <em>designed</em> to seek a human and divine presence. Its failure to find one in an AI text is not a failure of the method, but a successful diagnosis of the machine's profane nature.</p>
+      <p>A modern critic might call this a "hermeneutic blind spot." But for a Romantic, it is the entire point. Their method is not a neutral analytical tool; it is a spiritual discipline. It is <em>designed</em> to discover a human and divine presence. Its failure to find one in an AI text is not a failure of the method, but a successful diagnosis of the machine's profane nature.</p>
       
       <h3>The Critical Pivot: The Method is a Moral Compass</h3>
       <p>The Romantic method doesn't have a "blind spot"; it has a conviction. Its foundational bias is that meaningful language comes from a soul. A text produced by a machine with no consciousness is, from this perspective, not a new kind of text, but a desecration. It is the logic of the "Mechanical Age" made manifest, an artifact of what Carlyle called a world that has "lost its belief in the Invisible."<sup><a href="#ref2">2</a></sup></p>
