--- a/post29.html
+++ b/post29.html
@@ -27,7 +27,7 @@
             <p>But the problem might go deeper. Let's think about the primary tool for structuring the modern course: the syllabus. I'm looking at a <a href="https://www.umsl.edu/services/ctl/resources-for-teaching/syllabus-templates.html">bunch of templates</a> from the University of Missouri-St. Louis. Not picking on UMSL. Just the first link when I Googled "syllabus template." It is a perfect artifact of a system that has already replaced the personal with the technical. It isn't a conversation; it's a script with blank spaces to be filled in.</p>
 
             <ul>
-                <li><strong>On Availability:</strong> "A statement about faculty availability is required... Sample language below." The personal invitation to office hours, the very symbol of mentorship, is now a required, pre-fabricated statement.</li>
+                <li><strong>On Availability:</strong> "A statement about faculty availability is required... Sample language below." The personal invitation to office hours, the symbol of mentorship, is now a required, pre-fabricated statement.</li>
                 <li><strong>On Communication:</strong> "This new required statement asks you to tell students how they can expect to hear back from you... Sample language below: I aim to respond to student emails within 24-48 hours during the week..." This is not the language of human relationship; it's the language of a service-level agreement. It's a contract for response times.</li>
                 <li><strong>On Course Content:</strong> The instructor is prompted to "(Get the course description from the University Bulletin and supplement with 3-5 sentences...)." The core of the course is boilerplate, copied and pasted from a central repository.</li>
             </ul>
@@ -38,7 +38,7 @@
                 <p>Technique refers to any complex of standardized means for attaining a predetermined result. Thus, it converts spontaneous and unreflective behavior into behavior that is deliberate and rationalized.</p>
             </blockquote>
 
-            <p>The syllabus is the very definition of this. It takes the spontaneous and unpredictable act of teaching and rationalizes it. It manages risk, sets clear (and legally defensible) expectations, ensures uniformity, and guarantees a predictable product. It is a "standardized means for attaining a predetermined result." And as Ellul knew, the goal of this technical system is not to create free-thinking individuals, but to produce functionaries for the technical society itself.</p>
+            <p>The syllabus is <em>the</em> definition of this. It takes the spontaneous and unpredictable act of teaching and rationalizes it. It manages risk, sets clear (and legally defensible) expectations, ensures uniformity, and guarantees a predictable product. It is a "standardized means for attaining a predetermined result." And as Ellul knew, the goal of this technical system is not to create free-thinking individuals, but to produce functionaries for the technical society itself.</p>
 
             <blockquote style="border-left: 3px solid #ccc; padding-left: 1.5rem; margin-left: 1rem; font-style: italic;">
                 <p>Education, even in France, is becoming oriented toward the specialized end of producing technicians... The intelligentsia will no longer be a model, a conscience, or an animating intellectual spirit for the group... They will be the servants, the most conformist imaginable, of the instruments of technique.</p>
