added opt-out pieces

--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
 
         <nav>
             <ul>
+                <li><a href="post89.html">89 The Principled Opt-Out: A Defense</a></li>
+                <li><a href="post88.html">88 A Quick Note: Adichie and the Deep Opt-In</a></li>
                 <li><a href="post87.html">87 The Enduring Influence of the Romantic Turn</a></li>
                 <li><a href="post86.html">86 An Unresolved Inheritance</a></li>
                 <li><a href="post85.html">85 Beyond the Binary: Hegel's Turn to Ethical Life</a></li>
