--- a/post83.html
+++ b/post83.html
@@ -23,7 +23,7 @@
         <article>
             <h2>83 The Pathology of Inaction: Hegel's Diagnosis</h2>
 
-            <p>Just as the Romantic ideal of the isolated, morally pure self reached its zenith, it met its most serious, rigorous critic. The philosopher G.W.F. Hegel, in his 1807 masterpiece <em>Phenomenology of Spirit</em>, provided a devastating diagnosis of this entire ethical posture. He gave its embodiment a name: the "beautiful soul" (<em>schöne Seele</em>), a direct reference to the Schillerian ideal I discussed in <a href="post77.html">a previous post</a>.</p>
+            <p>Just as the Romantic ideal of the isolated, morally pure self reached its zenith, it met its most serious, rigorous critic. The philosopher G.W.F. Hegel, in his 1807 masterpiece <em>Phenomenology of Spirit</em>, developed a rigorous and harsh diagnosis of this entire ethical posture. He gave its embodiment a name: the "beautiful soul" (<em>schöne Seele</em>), a direct reference to the Schillerian ideal I discussed in <a href="post77.html">a previous post</a>.</p>
 
             <p>Hegel's beautiful soul is a consciousness fanatically devoted to its own internal purity. It perceives the actual world of politics, commerce, and social life as inherently corrupt and messy. To preserve the "splendour of its inner being," it must avoid engagement at all costs. Any concrete action, any deed, is seen as a potential contamination that would stain its pristine conscience. This existential dread compels the beautiful soul to "flee from contact with the actual world."</p>
 
