--- a/post87.html
+++ b/post87.html
@@ -33,7 +33,7 @@
 
             <p>I'm pretty sure my <a href="post72.html"></a> Deleuze project will uncover a bunch more.</p>
 
-            <p><a href="index.html">Home</a> | <a href="post86.html">Previous Post</a></p>
+            <p><a href="index.html">Home</a> | <a href="post86.html">Previous Post</a> | <a href="post88.html">Next Post</a></p>
         </article>
     </main>
     <footer data-template="footer">
