--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 
         <nav>
             <ul>
+                <li><a href="post90.html">90 The Price of Citizenship: A Case for the Deep Opt-In</a></li>
                 <li><a href="post89.html">89 The Principled Opt-Out: A Defense</a></li>
                 <li><a href="post88.html">88 A Quick Note: Adichie and the Deep Opt-In</a></li>
                 <li><a href="post87.html">87 The Enduring Influence of the Romantic Turn</a></li>
