--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
 
         <nav>
             <ul>
+                <li><a href="post93.html">93 The Unparalyzed Skater: Answering the Apraxia Charg</a></li>
+                <li><a href="post92.html">92 Skating Along the Surface: A Pyrrhonist Guide</a></li>
                 <li><a href="post91.html">91 The Paradox of Mere Exposure: Stolzenberg and the <em>Mozert</em> Case</a></li>
                 <li><a href="post90.html">90 The Price of Citizenship: A Case for the Deep Opt-In</a></li>
                 <li><a href="post89.html">89 The Principled Opt-Out: A Defense</a></li>
