added hegel deleuze posts

--- a/index.html
+++ b/index.html
@@ -33,6 +33,12 @@
 
         <nav>
             <ul>
+                <li><a href="post99.html">99 The Nomad's Workshop: A Surly Invitation to Opt-In</a></li>
+                <li><a href="post98.html">98 The Citizen and the Nomad: Two Enemy Opt-Ins</a></li>
+                <li><a href="post97.html">97 The Price of Freedom: Hegel's Deep Opt-In</a></li>
+                <li><a href="post96.html">96 The Unlikely Community: Doubling Down on Deleuze's Bartleby</a></li>
+                <li><a href="post95.html">95 The Politics of Saying Nothing (Žižek's Bartleby)</a></li>
+                <li><a href="post94.html">94 The New Man Who "Prefers Not To" (Deleuze's Bartleby)</a></li>
                 <li><a href="post93.html">93 The Unparalyzed Skater: Answering the Apraxia Charg</a></li>
                 <li><a href="post92.html">92 Skating Along the Surface: A Pyrrhonist Guide</a></li>
                 <li><a href="post91.html">91 The Paradox of Mere Exposure: Stolzenberg and the <em>Mozert</em> Case</a></li>
@@ -74,17 +80,17 @@
                 <li><a href="post55.html">55 More Than Bullshit: The Soulless Chaos of the Machine</a></li>
                 <li><a href="post54.html">54 The Author-Function as Sacrilege: A Romantic Test</a></li>
                 <li><a href="post53.html">53 Reconsidering the Romantics: Making It More Rigorous</a></li>
-                <li><a href="post52.html">52 Analogies for Writing with AI and Why I Don't Like Them</a></li>
+                <li><a href="post52.html">52 The Baker Analogy</a></li>
                 <li><a href="post51.html">51 So About That Shopping Cart</a></li>
                 <li><a href="post50.html">50 Three Mothers, Two Systems of Meaning</a></li>
                 <li><a href="post49.html">49 Just a Kid Like Everyone Else</a></li>
-                <li><a href="post48.html">48 A Structuralist Reading of the "Hero" Video</a></li>
-                <li><a href="post47.html">47 A Hero for Whom?</a></li>
-                <li><a href="post46.html">46 The Cowboy and the Thunder-God</a></li>
+                <li><a href="post48.html">48 A structuralist reading of the "Hero" video</a></li>
+                <li><a href="post47.html">47 A hero for whom?</a></li>
+                <li><a href="post46.html">46 The cowboy and the thunder-god</a></li>
                 <li><a href="post45.html">45 Heroes and Parades</a></li>
-                <li><a href="post44.html">44 So What Do I Think?</a></li>
-                <li><a href="post43.html">43 A Dance of Symbols</a></li>
-                <li><a href="post42.html">42 An Attempt at Summing Things Up So Far</a></li>
+                <li><a href="post44.html">44 So what do I think?</a></li>
+                <li><a href="post43.html">43 A dance of symbols</a></li>
+                <li><a href="post42.html">42 An attempt at summing things up so far</a></li>
                 <li><a href="post41.html">41 A Computational View of Language</a></li>
                 <li><a href="post40.html">40 AI and Bullshit, a Moralist View</a></li>
                 <li><a href="post39.html">39 This Guy's an Idiom</a></li>
