--- a/index.html
+++ b/index.html
@@ -33,6 +33,11 @@
 
         <nav>
             <ul>
+                <li><a href="post104.html">104 Should Syllabi Try to Make Students Better People (Morally Speaking)?</a></li>
+                <li><a href="post103.html">103 Should Teachers Try to Make Their Students Better People (Morally Speaking)?</a></li>
+                <li><a href="post102.html">102 Does Art Make People Better People (Morally Speaking)?</a></li>
+                <li><a href="post101.html">101 Do Deconstructionists or Romantics Make for Better Christians?</a></li>
+                <li><a href="post100.html">100 Should AI Try to Be Good (Morally Speaking)?</a></li>
                 <li><a href="post99.html">99 The Nomad's Workshop: A Surly Invitation to Opt-In</a></li>
                 <li><a href="post98.html">98 The Citizen and the Nomad: Two Enemy Opt-Ins</a></li>
                 <li><a href="post97.html">97 The Price of Freedom: Hegel's Deep Opt-In</a></li>
