minor lit posts

--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
 
         <nav>
             <ul>
+                <li><a href="post106.html">106 Carving the Minor: Deleuze’s Lines of Flight</a></li>
+                <li><a href="post105.html">105 Entering the Mass: Hegel’s Deep Opt-In</a></li>
                 <li><a href="post104.html">104 Should Syllabi Try to Make Students Better People (Morally Speaking)?</a></li>
                 <li><a href="post103.html">103 Should Teachers Try to Make Their Students Better People (Morally Speaking)?</a></li>
                 <li><a href="post102.html">102 Does Art Make People Better People (Morally Speaking)?</a></li>
