--- a/index.html
+++ b/index.html
@@ -30,9 +30,16 @@
             </section>
         </div>
 
-
         <nav>
             <ul>
+                <!-- New posts added to the top -->
+                <li><a href="post111.html">111 The Student’s Right to Their Own Methods</a></li>
+                <li><a href="post110.html">110 Objection 2: “AI Writing Harms Others and the University”</a></li>
+                <li><a href="post109.html">109 Objection 1: “Students Won’t Learn to Write”</a></li>
+                <li><a href="post108.html">108 Mill on Autonomy (One Key Passage)</a></li>
+                <li><a href="post107.html">107 Two Current AI Policies (Quoted &amp; Explained)</a></li>
+
+                <!-- Existing posts follow -->
                 <li><a href="post106.html">106 Carving the Minor: Deleuze’s Lines of Flight</a></li>
                 <li><a href="post105.html">105 Entering the Mass: Hegel’s Deep Opt-In</a></li>
                 <li><a href="post104.html">104 Should Syllabi Try to Make Students Better People (Morally Speaking)?</a></li>
@@ -46,104 +53,4 @@
                 <li><a href="post96.html">96 The Unlikely Community: Doubling Down on Deleuze's Bartleby</a></li>
                 <li><a href="post95.html">95 The Politics of Saying Nothing (Žižek's Bartleby)</a></li>
                 <li><a href="post94.html">94 The New Man Who "Prefers Not To" (Deleuze's Bartleby)</a></li>
-                <li><a href="post93.html">93 The Unparalyzed Skater: Answering the Apraxia Charg</a></li>
-                <li><a href="post92.html">92 Skating Along the Surface: A Pyrrhonist Guide</a></li>
-                <li><a href="post91.html">91 The Paradox of Mere Exposure: Stolzenberg and the <em>Mozert</em> Case</a></li>
-                <li><a href="post90.html">90 The Price of Citizenship: A Case for the Deep Opt-In</a></li>
-                <li><a href="post89.html">89 The Principled Opt-Out: A Defense</a></li>
-                <li><a href="post88.html">88 A Quick Note: Adichie and the Deep Opt-In</a></li>
-                <li><a href="post87.html">87 The Enduring Influence of the Romantic Turn</a></li>
-                <li><a href="post86.html">86 An Unresolved Inheritance</a></li>
-                <li><a href="post85.html">85 Beyond the Binary: Hegel's Turn to Ethical Life</a></li>
-                <li><a href="post84.html">84 The Hypocrisy of the "Hard Heart"</a></li>
-                <li><a href="post83.html">83 The Pathology of Inaction: Hegel's Diagnosis</a></li>
-                <li><a href="post82.html">82 The Kingdom of Individuals and the Moral Semaphore</a></li>
-                <li><a href="post81.html">81 Watering the Poisoned Seed</a></li>
-                <li><a href="post80.html">80 The Author De-Mythologized: Art as Industrial Product</a></li>
-                <li><a href="post79.html">79 The Case for a Secular Boycott</a></li>
-                <li><a href="post78.html">78 Reading as Communion, a New Interpretive Goal</a></li>
-                <li><a href="post77.html">77 Schiller’s Ideal of the "Beautiful Soul"</a></li>
-                <li><a href="post76.html">76 The World as a Moral Threat</a></li>
-                <li><a href="post75.html">75 The Tainted Seed: Art as an Organic Unfolding</a></li>
-                <li><a href="post74.html">74 The Author's Soul Made Manifest</a></li>
-                <li><a href="post73.html">73 An Unacknowledged Inheritance</a></li>
-                <li><a href="post72.html">72 Professor Plate's Capstone Project (a plan)</a></li>
-                <li><a href="post71.html">71 Schleiermacher's Divided Self: A Romantic Who Knew We Weren't Whole</a></li>
-                <li><a href="post70.html">70 The Parasite in the Machine: A Lacanian Reading of Elan Barenholtz</a></li>
-                <li><a href="post69.html">69 The Expert's Anxiety</a></li>
-                <li><a href="post68.html">68 The Unauthorized Exorcist and the Wicked Preacher</a></li>
-                <li><a href="post67.html">67 Appropriating the Gold of the Machines</a></li>
-                <li><a href="post66.html">66 Augustine's Signs</a></li>
-                <li><a href="post65.html">65 On That Line Between Humans and Not-Humans</a></li>
-                <li><a href="post64.html">64 One Way I'm Really Different From Everyone</a></li>
-                <li><a href="post63.html">63 Three Roads Forward</a></li>
-                <li><a href="post62.html">62 A Practical Method for Reading AI: Archaeology and Teleology</a></li>
-                <li><a href="post61.html">61 A Conflict of Interpretations: Ricoeur's Method for Reading AI</a></li>
-                <li><a href="post60.html">60 Sleep Well! The Unconscious Arrogance of Medieval Sermon Technology</a></li>
-                <li><a href="post59.html">59 The Cowboy and the Machine: A Final Reading of "Hero"</a></li>
-                <li><a href="post58.html">58 The Final Triumph of the Mechanical Age: A Coda</a></li>
-                <li><a href="post57.html">57 The Search for the Divine Spark: Why the Ghost Matters</a></li>
-                <li><a href="post56.html">56 The Monstrous Parody of Synthetic Individuality</a></li>
-                <li><a href="post55.html">55 More Than Bullshit: The Soulless Chaos of the Machine</a></li>
-                <li><a href="post54.html">54 The Author-Function as Sacrilege: A Romantic Test</a></li>
-                <li><a href="post53.html">53 Reconsidering the Romantics: Making It More Rigorous</a></li>
-                <li><a href="post52.html">52 The Baker Analogy</a></li>
-                <li><a href="post51.html">51 So About That Shopping Cart</a></li>
-                <li><a href="post50.html">50 Three Mothers, Two Systems of Meaning</a></li>
-                <li><a href="post49.html">49 Just a Kid Like Everyone Else</a></li>
-                <li><a href="post48.html">48 A structuralist reading of the "Hero" video</a></li>
-                <li><a href="post47.html">47 A hero for whom?</a></li>
-                <li><a href="post46.html">46 The cowboy and the thunder-god</a></li>
-                <li><a href="post45.html">45 Heroes and Parades</a></li>
-                <li><a href="post44.html">44 So what do I think?</a></li>
-                <li><a href="post43.html">43 A dance of symbols</a></li>
-                <li><a href="post42.html">42 An attempt at summing things up so far</a></li>
-                <li><a href="post41.html">41 A Computational View of Language</a></li>
-                <li><a href="post40.html">40 AI and Bullshit, a Moralist View</a></li>
-                <li><a href="post39.html">39 This Guy's an Idiom</a></li>
-                <li><a href="post38.html">38 Is AI Bullshit?</a></li>
-                <li><a href="post37.html">37 Sharpening the Blur</a></li>
-                <li><a href="post36.html">36 A System Running Inside</a></li>
-                <li><a href="post35.html">35 Another Quote</a></li>
-                <li><a href="post34.html">34 A Quote</a></li>
-                <li><a href="post33.html">33 Something New and Strange</a></li>
-                <li><a href="post32.html">32 Harari's AI Future (Part 2)</a></li>
-                <li><a href="post31.html">31 Harari's AI Future (Part 1)</a></li>
-                <li><a href="post30.html">30 But What About Whitman?</a></li>
-                <li><a href="post29.html">29 No Wince in the Syllabus, No Wince in the Student?</a></li>
-                <li><a href="post28.html">28 No Wince in the Writer, No Wince in the Reader?</a></li>
-                <li><a href="post27.html">27 Preaching by Prompt in the 16th Century</a></li>
-                <li><a href="post26.html">26 The Pastor as Romantic Author</a></li>
-                <li><a href="post25.html">25 Crossing Brooklyn Ferry</a></li>
-                <li><a href="post24.html">24 We Get This Thinking in Us - Part 3</a></li>
-                <li><a href="post23.html">23 We Get This Thinking in Us - Part 2</a></li>
-                <li><a href="post22.html">22 We Get This Thinking in Us - Part 1</a></li>
-                <li><a href="post21.html">21 The Romantic Trace</a></li>
-                <li><a href="post20.html">20 AI and Fascism</a></li>
-                <li><a href="post19.html">19 A Big Thank-You to Benjamin, But...</a></li>
-                <li><a href="post18.html">18 Theses on an AI Notebook (A Guest Post)</a></li>
-                <li><a href="post17.html">17 Propaganda and Being Seen</a></li>
-                <li><a href="post16.html">16 Propaganda and My Feelings</a></li>
-                <li><a href="post15.html">15 Propaganda and What's Already There</a></li>
-                <li><a href="post14.html">14 Back to the Romantic</a></li>
-                <li><a href="post13.html">13 Summing Things Up</a></li>
-                <li><a href="post12.html">12 Evil as Imitative Negation</a></li>
-                <li><a href="post11.html">11 Evil as Frustrated Ends</a></li>
-                <li><a href="post10.html">10 Evil as Systemic Harm</a></li>
-                <li><a href="post9.html">9 Romantic Evil</a></li>
-                <li><a href="post8.html">8 Something Online About the Soul of Art</a></li>
-                <li><a href="post7.html">7 Only Humans</a></li>
-                <li><a href="post6.html">6 Two Things I Reject</a></li>
-                <li><a href="post5.html">5 Starting...Now</a></li>
-                <li><a href="post4.html">4 This Puzzles Me</a></li>
-                <li><a href="post3.html">3 A Guiding Principle</a></li>
-                <li><a href="post2.html">2 Hallucinations and misinformation and AI</a></li>
-                <li><a href="post1.html">1 This Site</a></li>
-            </ul>
-        </nav>
-    </main>
-    <footer data-template="footer">
-        <p>&copy;2025 Daniel Plate</p>
-    </footer>
-</body>
-</html>
+                <li
